# CommunistCursor

./: .gitignore  .gitmodules  CMakeLists.txt  GenProject.bat  GenProject_mac.sh  Info.plist  README.md
src/: NativeInterface.h  OSInterface.cpp  OSInterface.h  OSInterfaceError.cpp  OSInterfaceError.h  Socket.cpp  Socket.h  SocketError.cpp  SocketError.h  SocketException.cpp  SocketException.h  main.cpp
src/CC/: BasicTypes.h  CCBroadcastManager.cpp  CCBroadcastManager.h  CCClient.cpp  CCClient.h  CCDisplay.cpp  CCDisplay.h  CCEntityManager.cpp  CCEntityManager.h  CCMain.cpp  CCMain.h  CCNetworkEntity.cpp  CCNetworkEntity.h  CCPacketTypes.h  CCServer.cpp  CCServer.h  INetworkEntityDiscovery.h  NetworkEntity.cpp  NetworkEntity.h
src/GUI/: CMakeLists.txt  DisplayWidget.py  DisplayWidgetArea.py  DisplayWidgetGroup.py  DisplayWindow.py  GenerateExe.py  Main.py  MainWindow.py  requirements.txt
src/MacOS/: MacOSInterface.cpp
src/OSInterface/: IOSEventReceiver.h  NativeInterface.h  OSInterface.cpp  OSInterface.h  OSInterfaceError.cpp  OSInterfaceError.h  OSTypes.cpp  OSTypes.h  PacketTypes.cpp  PacketTypes.h
src/Service/: CMakeLists.txt  main.cpp
src/Service/CC/: BasicTypes.h  CCBroadcastManager.cpp  CCBroadcastManager.h  CCClient.cpp  CCClient.h  CCConfigurationManager.cpp  CCConfigurationManager.h  CCDisplay.cpp  CCDisplay.h  CCGUIInterface.cpp  CCGUIInterface.h  CCGUIService.cpp  CCGUIService.h  CCLogger.cpp  CCLogger.h  CCMain.cpp  CCMain.h  CCNetworkEntity.cpp  CCNetworkEntity.h  CCPacketTypes.h  CCServer.cpp  CCServer.h  IGuiServiceInterface.h  INetworkEntityDelegate.h  INetworkEntityDiscovery.h
src/Service/Dispatcher/: DispatchJob.h  DispatchManager.cpp  DispatchManager.h  DispatchQueue.cpp  DispatchQueue.h
src/Service/Linux/: LinuxInterface.cpp
src/Service/MacOS/: MacOSInterface.cpp  MacOSInterface.mm
src/Service/OSInterface/: IOSEventReceiver.h  KeyCodes.h  NativeInterface.h  OSInterface.cpp  OSInterface.h  OSInterfaceError.cpp  OSInterfaceError.h  OSTypes.cpp  OSTypes.h  PacketTypes.cpp  PacketTypes.h
src/Service/Socket/: Socket.cpp  Socket.h  SocketError.cpp  SocketError.h  SocketException.h  SocketUtils.cpp  SocketUtils.h
src/Service/Windows/: WindowsInterface.cpp
src/Socket/: Socket.cpp  Socket.h  SocketError.cpp  SocketError.h  SocketException.cpp  SocketUtils.cpp  SocketUtils.h
src/Unix/: UnixInterface.cpp
src/Windows/: WindowsInterface.cpp
